# llms-txt

./: .gitignore  CHANGELOG.md  CNAME  README.md  agents.txt  copilothq.co.md.txt  core.html  core.html.md  domains-commonmark.md  domains.html  ed-commonmark.md  ed.html  index.html  index.md  intro.html  intro.html.md  llms-ctx-full.txt  llms-ctx.txt  llms-sample.txt  llmstxt-js.html  nbdev.html  nbdev.md  pyproject.toml  quickwebx  robots.txt  search.json  settings.ini  sitemap.xml  styles.css  update.sh  well-known-uri.md
llms_txt/: __init__.py  _modidx.py  core.py  miniparse.py  txt2html.py
nbs/: .gitignore  00_intro.ipynb  01_core.ipynb  _quarto.yml  directory.md  domains.md  ed.md  index.md  index.qmd  llms-ctx-full.txt  llms-sample.txt  llms.txt  nbdev.qmd  nbdev.yml  sidebar.yml  styles.css  tutorial.qmd
site_libs/bootstrap/: bootstrap-0620f3e0ae9b0d8b6a366e3c357ac41a.min.css  bootstrap-5a22adb5426531fa2d1198e07eebf1da.min.css  bootstrap-6e691d2ee7826bb5513fc94e27498ddc.min.css  bootstrap-9fc4c5b4a04f5d935d516733c6521ece.min.css  bootstrap-aa62e3823480f8985dca914c38e512c0.min.css  bootstrap-b8db1104a70b1fb1d7e9ce71f21857ff.min.css  bootstrap-c5006e340b51896d93fd6e03cdd02b94.min.css  bootstrap-d9a779fc08c830dad4ddc734704e692f.min.css
tests/: test-parse.py
