[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="llms-txt"
dynamic = ["version"]
description = "The /llms.txt file, helping language models use your website"
readme = "README.md"
requires-python=">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python', 'LLMs', 'NLP']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/llms-txt"
Documentation = "https://llmstxt.org/"

[project.entry-points.nbdev]
llms_txt = "llms_txt._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "llms_txt.__version__"}

[tool.setuptools.packages.find]
include = ["llms_txt"]

[tool.nbdev]
custom_sidebar = true
